# CageBasedImageDeformation

./: CMakeLists.txt  README.md  main.cpp
cage_deform_tool/: CMakeLists.txt  cage_deform_tool.cpp  cage_deform_tool.h  scanline.cpp  scanline.h
data/: tower_of_pisa_cage_points.txt  tower_of_pisa_transformed_cage_points.txt
